<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecurityAppVersionOne</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="textViewLogin">Login</string>
    <string name="textViewUserName">Username</string>
    <string name="editTextUserNameHint">Enter email</string>
    <string name="textViewPassword">Password</string>
    <string name="editTextPasswordHint">Password</string>
    <string name="buttonLogin">Login</string>
    <string name="cctvButtonTextView">CCTV</string>


</resources>
